fix alignment

--- a/src/app/pages/search/search.scss
+++ b/src/app/pages/search/search.scss
@@ -219,7 +219,7 @@ $sidebar-w: 280px;
   }
 
   .result-image {
-    height: 220px;
+    height: 260px;
     background-size: cover;
     background-position: center top;
     position: relative;
